[package]
name = "rust-training"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[dependencies]
rand = "0.8.5"
libc = "0.2.168"
async-channel = "2.3.1"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
async-compression = { version = "0.4.18", features = ["tokio", "bzip2"] }
aws-sdk-s3 = { version = "1.69.0", features = ["behavior-version-latest"] }
aws-types = "1.3.4"
tar = "0.4.43"
http = "1.2.0"
bytes = "1.9.0"
http-body = "1.0.1"